--- a/flower-test.html
+++ b/flower-test.html
@@ -16,9 +16,11 @@
 -->
 
 <body class="not-loaded">
-  <div class="night"></div>
-  <div class="flowers">
-    <div class="flower flower--1">
+  <div class="camera-container">
+    <div class="flower-scene">
+     <div class="night"></div>
+      <div class="flowers">
+      <div class="flower flower--1">
       <div class="flower__leafs flower__leafs--1">
         <div class="flower__leaf flower__leaf--1"></div>
         <div class="flower__leaf flower__leaf--2"></div>
