--- a/american_institutions.html
+++ b/american_institutions.html
@@ -6,7 +6,9 @@
   <title>American Institutions (AI) - Jesús Lopez Aguilar</title>
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <div class="night"></div>
 </head>
+  
 <body>
 
   <!-- NAVBAR -->
