--- a/international_global.html
+++ b/international_global.html
@@ -6,6 +6,7 @@
   <title>International & Global (IG) – POLS 2100</title>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <div class="night"></div>
 </head>
 
 <body>
