--- a/quantitative_literacy.html
+++ b/quantitative_literacy.html
@@ -6,7 +6,9 @@
   <title>Quantitative Literacy (QL) - Jesús Lopez Aguilar</title>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <div class="night"></div>
 </head>
+  
 
 <body>
 
