--- a/social_science.html
+++ b/social_science.html
@@ -48,6 +48,7 @@
   <p>This reflection is my response to that challenge. It’s layered with my own experience, the data I gathered, and the stories that shaped this class. It’s blunt, personal, and unapologetically real — because that’s what this course demanded: truth, not performance.</p>
 
   <h2 style="color: #00bcd4;">Signature Assignment – “What Does It Mean to Be American?”</h2>
+  <img src="images/what_does_it_mean_to_be_american.png" alt="What Does It Mean to Be American poster" style="width:100%; max-width:850px; margin: 30px auto; display: block; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.6);">
   <p>This signature assignment asked us to confront American identity through the lens of our own experience, informed by qualitative research and interviews. My approach? If America wanted answers, it was going to get them uncensored. I collected survey data from thousands across the country — and then tore the concept of "American" wide open. Below is my final written reflection for the class.</p>
 
   <h2 style="color: #00bcd4;">Final Reflection</h2>
