--- a/social_science.html
+++ b/social_science.html
@@ -48,32 +48,33 @@
   <p>This reflection is my response to that challenge. It’s layered with my own experience, the data I gathered, and the stories that shaped this class. It’s blunt, personal, and unapologetically real — because that’s what this course demanded: truth, not performance.</p>
 
   <h2 style="color: #00bcd4;">Signature Assignment – “What Does It Mean to Be American?”</h2>
-  <img src="images/what_does_it_mean_to_be_american.png" alt="What Does It Mean to Be American poster" style="width:100%; max-width:850px; margin: 30px auto; display: block; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.6);">
+  <img src="images/Presentation2.png" alt="What Does It Mean to Be American poster" style="width:100%; max-width:850px; margin: 30px auto; display: block; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.6);">
+  
   <p>This signature assignment asked us to confront American identity through the lens of our own experience, informed by qualitative research and interviews. My approach? If America wanted answers, it was going to get them uncensored. I collected survey data from thousands across the country — and then tore the concept of "American" wide open. Below is my final written reflection for the class.</p>
 
   <h2 style="color: #00bcd4;">Final Reflection</h2>
   <p>To be truly honest, I don’t even have a formal opinion on American identity other than: you’re literally the whitest bitch in the room. You’re the one tailgating me with your ultra-bright LED headlights while I’m already going 90 in the fast lane, still kissing my bumper like it’s patriotic. I’ve heard more about the Second Amendment than I’ve heard people spell the word amendment. Flags with guns. Guns with flags. Pickup trucks with both. Nobody’s really sure if the Constitution still applies unless it’s about guns or gas prices. And half the people screaming about “freedom” have their Wi-Fi password set to BackTheBlue123. But yeah America, land of the free, home of the delusional high beams.</p>
-
+  <br>
   <p>Lowkey, I used to think American identity was just overly confident cheerleaders in USA flag crop tops. You know the ones. TikTok dancers with camo Crocs and acrylic nails screaming “FREEDOM” while using a straw in a turtle cup. But nah. It’s more like a personality cult. It’s people bragging about rights they don’t understand and never had to earn. And no one really knows when the Constitution applies unless someone’s crying about guns, taxes, or Starbucks cups.</p>
-
+  <br>
   <p>I walked into this class Mexican-American and I walked out Mexican-American. Still got asked if I was Asian. So apparently, I don’t even qualify for the hyphen. That’s been the story. Being enough to check a box but not enough to be believed when I say “I’m from here.” Someone always needs a follow-up question. Like I’m lying. Like “Salt Lake” isn’t good enough. It’s always “but where are you really from?” Sir, the hospital on 900 South. Next question.</p>
-
+  <br>
   <p>Before this class, I didn’t think much about American identity because it felt like something people tried to keep me out of. Unless they needed a diversity stat. Or a poster. Or a “Look! Inclusion!” moment. But this course made me slow down. Think. Not kumbaya think. Like, “wait, do I even like this country?” kind of think. Because when we started talking about who gets to tell the story, it hit me. America isn’t about freedom. It’s about narrative control. It’s about who gets to speak and who gets muted.</p>
-
+  <br>
   <p>Our survey project forced people to reflect. I expected flag-waving, patriotism, and hot dogs. But most people wrote about grief. Survival. Feeling disconnected. Some felt angry. Others numb. And then a few still managed to say “freedom,” like that word hadn’t been chewed up and spit out by politics. The stories we got were messy and complicated, and that’s when I realized: so is identity. It’s not about pride. It’s about perspective.</p>
-
+  <br>
   <p>I started thinking about how I have to show my ID just to get Adderall. How I have to prove myself just to focus. That’s American. You can’t be trusted unless there’s a barcode on your forehead. I’ve had to prove I’m American in school, at work, and even in my own community. People hear me speak Spanish and look surprised. Or worse, relieved. Like “Oh thank God, I knew you were something.” It’s giving “I fetishize your ethnicity but will still vote for someone who wants you deported.”</p>
-
+  <br>
   <p>But if there’s anything I can tell you as an American, it’s this: I can tell you exactly how they treat inmates in juvenile detention. I can tell you what it’s like to sit in processing, wearing socks with holes, drinking apple juice from foil peel-top cups. Not from the cafeteria. From intake. I can tell you what it’s like to be told your anger is dangerous, but someone else’s rifle is just “his right.” I’ve seen white boys get a warning. I got a probation officer. I’ve seen police smile at drunk frat boys, then slam the hood on my friend’s car because his playlist was too loud.</p>
-
+  <br>
   <p>This class didn’t erase that. But it helped me name it. It helped me realize that America is not a fixed thing. It’s a moving target. It’s trauma wrapped in denim with a pocket Constitution and a missing empathy chip. But it’s also resilience. It’s the people who fight for a place at the table, even when the table was never meant for them. It’s my mom explaining insurance papers she never learned to read. It’s my classmates who showed up, even when their names were never spelled right.</p>
-
+  <br>
   <p>I thought American identity was supposed to be about freedom. Turns out, it’s mostly about proving you deserve to breathe it. And if you don’t believe me, try walking into a pharmacy without your ID and asking for your prescription. Try being bilingual in a country that barely understands one language. Try looking like me and driving past a cop.</p>
-
+  <br>
   <p>At the end of the day, I still don’t know if I believe in American identity. But I believe in the stories of people who don’t fit into it. I believe in the girl who wore her grandmother’s earrings to graduation because that’s the only legacy she had. I believe in the boys who survived juvie, not because they were rescued, but because they saved themselves. I believe in the kids who still stand up during the pledge, not because they want to, but because they’re scared not to.</p>
-
+  <br>
   <p>I believe in the people who are tired of being proof.</p>
-
+  <br>
   <p>I still don’t have a perfect definition. But I know this: I’ve lived through enough systems, courts, screenings, school suspensions, and side-eyes to tell you that American identity is less about how you feel and more about how you’re treated. I thought I was supposed to be proud of it. Turns out, I had to survive it first.</p>
 
   <p style="font-weight: bold; margin-top: 30px;">And somehow, I’m still the narrator.</p>
