--- a/social_science.html
+++ b/social_science.html
@@ -40,7 +40,7 @@
 </div>
 
 <!-- MAIN CONTENT -->
-<main class="centered-content-block fade-in-section">
+<main class="centered-content-block social-course fade-in-section">
   <h1 style="color: #00bcd4;">Social Science (SS) – HON 2060</h1>
   
   <h2 style="color: #00bcd4;">American Identities</h2>
