--- a/social_science.html
+++ b/social_science.html
@@ -43,19 +43,19 @@
 <main class="centered-content-block social-course fade-in-section">
   <h1 style="color: #00bcd4;">Social Science (SS) – HON 2060</h1>
   
-  <h2 style="color: #00bcd4;">American Identities</h2>
+  <h2>American Identities</h2>
  
   <p><em>This course wasn’t about waving flags — it was about peeling them back.</em> HON 2060: American Identities asked what it actually means to be “American” in a country full of contradictions. We covered identity from every angle: historical, cultural, social, and political — and none of it came with easy answers.</p>
 
   <p>This reflection is my response to that challenge. It’s layered with my own experience, the data I gathered, and the stories that shaped this class. It’s blunt, personal, and unapologetically real — because that’s what this course demanded: truth, not performance.</p>
 
-  <h2 style="color: #00bcd4;">Signature Assignment – “What Does It Mean to Be American?”</h2>
+  <h2>Signature Assignment – “What Does It Mean to Be American?”</h2>
 
   <img src="images/Presentation2.pdf" alt="What Does It Mean to Be American poster" style="width:100%; max-width:850px; margin: 30px auto; display: block; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.6);">
   
   <p>This signature assignment asked us to confront American identity through the lens of our own experience, informed by qualitative research and interviews. My approach? If America wanted answers, it was going to get them uncensored. I collected survey data from thousands across the country — and then tore the concept of "American" wide open. Below is my final written reflection for the class.</p>
 
-  <h2 style="color: #00bcd4;">Final Reflection</h2>
+  <h2>Final Reflection</h2>
   
   <p>To be truly honest, I don’t even have a formal opinion on American identity other than: you’re literally the whitest bitch in the room. You’re the one tailgating me with your ultra-bright LED headlights while I’m already going 90 in the fast lane, still kissing my bumper like it’s patriotic. I’ve heard more about the Second Amendment than I’ve heard people spell the word amendment. Flags with guns. Guns with flags. Pickup trucks with both. Nobody’s really sure if the Constitution still applies unless it’s about guns or gas prices. And half the people screaming about “freedom” have their Wi-Fi password set to BackTheBlue123. But yeah America, land of the free, home of the delusional high beams.</p>
   <br>
