--- a/social_science.html
+++ b/social_science.html
@@ -41,7 +41,7 @@
 
 <!-- MAIN CONTENT -->
 <main class="centered-content-block social-course fade-in-section">
-  <h1 style="color: #00bcd4;">Social Science (SS) – HON 2060</h1>
+  <h1 style="color: #00bcd4;">Social Science (SS) – Honors 2060</h1>
   
   <h2>American Identities</h2>
  
