--- a/social_science.html
+++ b/social_science.html
@@ -51,7 +51,7 @@
 
   <h2>Signature Assignment – “What Does It Mean to Be American?”</h2>
 
-  <img src="images/Presentation2.pdf" alt="What Does It Mean to Be American poster" style="width:100%; max-width:850px; margin: 30px auto; display: block; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.6);">
+  <img src="images/Presentation2.pdf" alt="What Does It Mean To Be American?" style="width:100%; max-width:750px; margin: 30px auto; display: block; border-radius: 12px; box-shadow: 0 0 15px rgba(0, 188, 212, 0.5);">
   
   <p>This signature assignment asked us to confront American identity through the lens of our own experience, informed by qualitative research and interviews. My approach? If America wanted answers, it was going to get them uncensored. I collected survey data from thousands across the country — and then tore the concept of "American" wide open. Below is my final written reflection for the class.</p>
 
