--- a/social_science.html
+++ b/social_science.html
@@ -91,9 +91,11 @@
 
   <p style="font-weight: bold; margin-top: 30px;">And somehow, I’m still the narrator.</p>
 
-  <div style="text-align: center; margin-top: 40px;">
-    <a href="courses.html" class="button">← Back to Courses</a>
-  </div>
+  <!-- NAVIGATION BUTTONS -->
+<div style="text-align:center; margin-top: 40px;">
+  <a href="courses.html" class="button" style="margin-right: 10px;">← Back to Courses</a>
+  <a href="eths2430.html" class="button">↪ Jump to Chican* & Latin* Experiences</a>
+</div>
 </main>
 
 <!-- FOOTER -->
