--- a/eths2430.html
+++ b/eths2430.html
@@ -40,16 +40,19 @@
 </div>
 
 <!-- MAIN CONTENT -->
-<main class="centered-content-block fade-in-section">
-  <h1>Social Science (SS) – ETHS 2430</h1>
-  <h2>Chican* & Latin* Experiences</h2>
+<main class="eths-page fade-in-section">
+  <h1>ETHS 2430 – Chicanx & Latinx Experiences</h1>
 
-  <p><em>This course centers on how Latin* and Chican* communities were formed and continue to evolve in response to historical events and current social issues. Topics included racial formation, Indigeneity, immigration, education, art, and future-building through policy and activism.</em></p>
+  <h2>Course Description</h2>
+  <p>Explore how Latin* and Chican* communities were formed and continue to evolve in response to historical events and current social issues...</p>
 
-  <h2>Signature Project Presentation</h2>
-  <p>My final presentation dives into themes of racial visibility, institutional performance, and the frustrating loop of resistance and reform. It’s grounded in real tension — from systems I’ve studied and lived through. This project didn’t offer hope, it demanded honesty.</p>
+  <h2>Signature Assignment</h2>
+  <iframe src="files/YOUR_PRESENTATION.pdf" width="100%" height="750px" style="border-radius: 12px; border: none; box-shadow: 0 0 10px rgba(0,0,0,0.4); margin: 30px 0;"></iframe>
 
-  <!-- EMBEDDED PDF -->
+  <div style="text-align: center;">
+    <a href="courses.html" class="button">← Back to Courses</a>
+  </div>
+</main>  <!-- EMBEDDED PDF -->
   <div style="text-align:center; margin: 30px 0;">
     <iframe 
       src="files/eths2430_presentation.pdf"
