--- a/eths2430.html
+++ b/eths2430.html
@@ -47,7 +47,7 @@
   <p>Explore how Latin* and Chican* communities were formed and continue to evolve in response to historical events and current social issues...</p>
 
   <h2>Signature Assignment</h2>
-  <iframe src="files/YOUR_PRESENTATION.pdf" width="100%" height="750px" style="border-radius: 12px; border: none; box-shadow: 0 0 10px rgba(0,0,0,0.4); margin: 30px 0;"></iframe>
+  <iframe src="files/eths2430_presentation.pdf" width="100%" height="750px" style="border-radius: 12px; border: none; box-shadow: 0 0 10px rgba(0,0,0,0.4); margin: 30px 0;"></iframe>
 
   <div style="text-align: center;">
     <a href="courses.html" class="button">← Back to Courses</a>
