--- a/eths2430.html
+++ b/eths2430.html
@@ -36,7 +36,7 @@
   </div>
 
   <!-- MAIN CONTENT -->
-  <main class="centered-content-block fade-in-section">
+  <main class="centered-content-block personal-projects-page fade-in-section">
     <h1>Social Science (SS) – ETHS 2430</h1>
     <h2>Chican* & Latin* Experiences</h2>
     <p><em>This course examined the evolution of Latin* and Chican* communities in response to historical trauma and modern social issues.</em> From Indigeneity and immigration to empowerment and cultural reimagining, we traced the movements and moments that continue shaping these communities in the U.S.</p>
