--- a/eths2430.html
+++ b/eths2430.html
@@ -46,11 +46,7 @@
 
     <!-- PDF EMBED -->
     <div style="text-align: center; margin: 40px auto;">
-      <iframe 
-        src="https://jesusa0416.github.io/eportfolio2/files/eths2430_presentation.pdf" 
-        style="width:100%; max-width:950px; height:1000px; border:none; border-radius:12px; box-shadow:0 0 20px rgba(0,188,212,0.5);" 
-        sandbox="allow-scripts allow-same-origin">
-      </iframe>
+      <iframe src="eths2430_presentation.pdf" width="100%" height="600px"></iframe>
     </div>
 
     <h2>Reflection</h2>
