--- a/eths2430.html
+++ b/eths2430.html
@@ -46,8 +46,7 @@
 
     <!-- PDF EMBED -->
     <div style="text-align: center; margin: 40px auto;">
-      <iframe src="eths2430_presentation.pdf" width="100%" height="600px"></iframe>
-    </div>
+      <iframe src="files/eths2430_presentation.pdf" width="100%" height="600px" style="border: 1px solid #ccc; border-radius: 10px;"></iframe>
 
     <h2>Reflection</h2>
     <div style="max-width: 850px; margin: 0 auto; font-size: 1.1em; line-height: 1.75;">
