--- a/eths2430.html
+++ b/eths2430.html
@@ -47,7 +47,9 @@
     <!-- PDF EMBED -->
     <div style="text-align: center; margin: 40px auto;">
       <iframe src="files/eths2430_presentation.pdf" width="100%" height="600px" style="border: 1px solid #ccc; border-radius: 10px;"></iframe>
-
+       <p style="text-align: center; margin-top: 10px;">
+       <a href="files/eths2430_presentation.pdf" target="_blank" style="color: #00bcd4;">Click here to view full presentation.</a>
+       </p>
     <h2>Reflection</h2>
     <div style="max-width: 850px; margin: 0 auto; font-size: 1.1em; line-height: 1.75;">
       <p>This assignment didn’t feel like a moment of discovery for me. Instead, it became a mirror. It was an uncomfortable, necessary checkpoint where I re-evaluated not what I learned, but what’s still broken within the systems we study and the very core of the curriculum itself...</p>
