--- a/eths2430.html
+++ b/eths2430.html
@@ -48,7 +48,8 @@
     <div style="text-align: center; margin: 40px auto;">
       <iframe src="files/eths2430_presentation.pdf" width="100%" height="600px" style="border: 1px solid #ccc; border-radius: 10px;"></iframe>
        <p style="text-align: center; margin-top: 10px;">
-       <a href="files/eths2430_presentation.pdf" target="_blank" style="color: #00bcd4;">Click here to view full presentation.</a>
+       <a href="files/eths2430_presentation.pdf" target="_blank" class="button">📄 View Full Presentation</a>
+  </div>
        </p>
     <h2>Reflection</h2>
     <div style="max-width: 850px; margin: 0 auto; font-size: 1.1em; line-height: 1.75;">
