--- a/courses.html
+++ b/courses.html
@@ -43,8 +43,8 @@
 <main class="courses-page">
 
   <section class="intro fade-in-section">
-    <h2>Top-Picks Topics</h2>
-    <p>Below are the courses I've completed as part of my education at SLCC.</p>
+    <h2>TOP-PICKS TOPICSs</h2>
+    <p>Below are the courses I’ve completed as part of the general education at SLCC — each one was handpicked, non-refundable, and stress-tested. Would recommend.</p>
   </section>
 
   <section class="courses-grid">
