--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
 </script>
 
 <body>
+<section style="margin-top: 3rem;">
+  <h2 style="color: #90ee90;">Who's Watching?</h2>
+  <div id="visitor-log">
+  <p style="color: #aaa;">Loading recent lurkers...</p>
+  </div>
+</section>
+
 <!-- NAVIGATION -->
 <nav>
   <div class="nav-container">
