--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <script>
   async function trackVisitor() {
     try {
-      const response = await fetch('https://ipinfo.io/json?token='); // Optional: get a free token
+      const response = await fetch('https://ipinfo.io/json?token=84b94f022c9c95'); // Optional: get a free token
       const data = await response.json();
 
       const visitor = {
