--- a/personal-projects.html
+++ b/personal-projects.html
@@ -48,7 +48,7 @@
     <div class="grid-row">
       <div class="info-box">
         <h3>Clubs & Campus Activities</h3>
-        <p>SLCC has many opportunities for you to get involved...</p>
+        <p>I did not join for a passion, I joined for the credit. Let's be honest. But somehow, between signing my name on a clipboard and pretending to care about Robert's Rules, I got involved. I showed up out of obligation and stayed because I realized half the room did not know what they were doing either. That said. Below are the clubs I was apart of during my time at Salt Lake Community College.</p>
         <ul>
           <li>Utah Criminology Student Association</li>
           <li>SLCC Student Nurse Organization</li>
