--- a/personal-projects.html
+++ b/personal-projects.html
@@ -61,7 +61,7 @@
     <div class="grid-row">
       <div class="info-box">
         <h3>Gaming & Technology</h3>
-        <p>Gaming on Xbox, setups, and teamwork development...</p>
+        <p>I guess I can say I play games. I used to enjoy them a lot more, until I started doing.. this. School, life, work, whatever this whole thing is. Now it's less about fun and more about passing the time without melting down. That said, I still know my way around a controller, a keyboard, and a broken system. I built this website myself, and I've got other projects in the works using Python, stuff that solves problems no one else wants to touch. It's not a passion, it's just what I do now. Because it works. And because it's mine.</p>
       </div>
       <div class="info-box">
         <h3>Healthcare & Nursing</h3>
