--- a/personal-projects.html
+++ b/personal-projects.html
@@ -65,7 +65,7 @@
       </div>
       <div class="info-box">
         <h3>Healthcare & Nursing</h3>
-        <p>I'm a dialysis tech and student — proud of my growth...</p>
+        <p>At 18 years old, I was probably holding your grandma's hand while you were too busy with your husband and fighting over the will. At 18, I was shocking hearts back to life, doing chest compressions so hard I was breaking ribs. I was cleaning blood, calming panic, and watching people die quitely while everyone else argued. And still, to management, I'm "just 18." The same people who charge you $500 for a single pill of Advil while I'm the one making sure you don't choke on your own breathe. I chose nurisng and law because no one taught me how to look away. The two most powerful degrees in the world: one that saves your life, and one that saves your future. That's me. I will hold both.</p>
       </div>
       <div class="info-box">
         <h3>Automotive & Driving</h3>
