--- a/personal-projects.html
+++ b/personal-projects.html
@@ -69,7 +69,7 @@
       </div>
       <div class="info-box">
         <h3>Automotive & Driving</h3>
-        <p>Stick shifts. Jeep Wranglers. Car guts. I’m in.</p>
+        <p>I didn’t grow up fixing cars for fun. I’m Mexican. I learned from my dad—and no, he wasn’t a mechanic either. We just knew. It stuck. It bled into me like every other survival skill you don’t realize you’re learning until something breaks. I learned how to drive stick at 14. Now I’m the one teaching everyone else. I’ve driven on no sleep, through storms, across cities in cars that rattled like they were begging to give out. And I still got there. I know the human body, and I know the anatomy of a car. Both fall apart the same way—silently, then all at once. You either respond fast, or you watch it die.</p>
       </div>
       <div class="info-box">
         <h3>Writing & Creativity</h3>
