--- a/personal-projects.html
+++ b/personal-projects.html
@@ -73,7 +73,7 @@
       </div>
       <div class="info-box">
         <h3>Writing & Creativity</h3>
-        <p>Humor and stories = therapy. I love to make people laugh.</p>
+        <p>I don’t write because it’s cute. I write because the same way someone hears a banger lyric and screams, I read a perfectly structured sentence and start banging my desk. It’s the rhythm. The flow. The punch of a clean transition that hits harder than most conversations I’ve had. Writing is the one place I control everything. The pacing, the tone, the silence. I don’t care if it’s an essay, a poem, or a chaotic mess in my Notes app—it’s mine. And sometimes, that’s all I need. A blank page and enough rage, memory, or heartbreak to set it on fire.</p>
       </div>
       <div class="info-box">
         <h3>Cultural Connection & Family</h3>
