--- a/personal-projects.html
+++ b/personal-projects.html
@@ -77,7 +77,7 @@
       </div>
       <div class="info-box">
         <h3>Cultural Connection & Family</h3>
-        <p>My Mexican roots ground everything I do and dream.</p>
+        <p>I’m not gonna sit here and say I don’t condone violence or that “it’s not the right way.” Sorry, foo—I’ve been in enough fights to know I will be doing something about it. That’s how I was raised. Not to start problems, but to finish them. I carry my culture in how I dress, how I walk, how I handle disrespect. I move like someone who knows what the consequences are—and still goes. I grew up wearing what people call “cartel-core,” like existing Mexican and loud is a threat. Maybe it is. I don’t need to prove where I’m from. But if you test it? You’ll see why López Aguilar are my last names.</p>
       </div>
     </div>
 
